# photo_backend_rs

./: .gitignore  README.md
photo_workspace/: .env  Cargo.toml
photo_workspace/auth_core/: Cargo.toml
photo_workspace/auth_core/src/: lib.rs
photo_workspace/auth_core/src/db/: config.rs  user.rs
photo_workspace/auth_core/src/middleware/: auth.rs
photo_workspace/auth_core/src/model/: user.rs  user_token.rs
photo_workspace/auth_service/: Cargo.toml
photo_workspace/auth_service/src/: main.rs
photo_workspace/auth_service/src/api/: auth.rs
photo_workspace/auth_service/src/database/: user.rs
photo_workspace/auth_service/src/model/: mod.rs  user.rs  user_token.rs
photo_workspace/common_lib/: Cargo.toml
photo_workspace/common_lib/src/: constant.rs  lib.rs
photo_workspace/common_lib/src/middleware/: auth.rs
photo_workspace/common_lib/src/model/: db.rs  mod.rs  response.rs
photo_workspace/common_lib/src/utils/: app_state.rs  mod.rs  redis.rs
photo_workspace/photo_service/: .env  Cargo.toml
photo_workspace/photo_service/src/: main.rs
photo_workspace/photo_service/src/database/: db_photo.rs  mod.rs
photo_workspace/photo_service/src/endpoint/: api_photo.rs  api_root.rs  mod.rs
photo_workspace/photo_service/src/model/: mod.rs  photo_model.rs
resource/: RBAC.sql  photo.sql
