[package]
name = "auth_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#公共库
common_lib = {path = "../common_lib"}
#链路追踪-日志
tracing = { workspace = true }
#用于订阅正在发生的日志、监控事件
tracing-subscriber = { workspace = true }
#序列化
serde =  { workspace = true }
#序列化JSON
serde_json = { workspace = true }
#网络框架
axum = { workspace = true }
#异步
tokio = { workspace = true }
#模块化组件库
tower = { workspace = true }
#数据库
sqlx = { workspace = true }
#jwt
jsonwebtoken = { workspace = true }
#参数验证
validator = { workspace = true }
#时间处理
chrono = { workspace = true }
#uuid
uuid = { workspace = true }
#缓存
redis = { workspace = true }