[package]
name = "auth_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#网络框架
axum =  { workspace = true }
#异步
tokio = { workspace = true }
#模块化组件库
tower = { workspace = true }
#中间件
tower-http = { workspace = true }
#序列化
serde = { workspace = true }
#序列化JSON
serde_json = { workspace = true }
#链路追踪-日志
tracing = { workspace = true }
#链路追踪
tracing-subscriber = { workspace = true }
#数据库
sqlx = { workspace = true }
#环境配置
dotenvy = { workspace = true }
#时间处理
chrono = { workspace = true }
#公共库
common_lib = {path = "../common_lib"}
#公共库
auth_core = {path = "../auth_core"}
#uuid
uuid = { workspace = true }
#jwt
jsonwebtoken = { workspace = true }
#验证
validator = { workspace = true }