[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#链路追踪-日志
tracing = "0.1.40"
#用于订阅正在发生的日志、监控事件
tracing-subscriber = {version = "0.3.17", features = ["env-filter"] }
#序列化
serde =  { version = "1.0.190", features = ["derive"] }
#序列化JSON
serde_json = "1.0.108"
#网络框架
axum = {version = "0.6.20", features = ["multipart", "headers"] }
#异步
tokio = {version = "1.33.0", features = ["full"] }
#模块化组件库
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["limit", "trace"] }
#权限认证
casbin = { version = "2.0.9", default-features = false, features = ["runtime-async-std", "logging", "incremental"] }
#数据库
sqlx = { version = "0.7.2", features = [ "runtime-tokio", "tls-native-tls", "mysql", "chrono"] }