[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#时间处理
chrono = { version = "0.4.31", features = ["serde"] }
#序列化
serde =  { version = "1.0.190", features = ["derive"] }
#序列化JSON
serde_json = "1.0.108"