[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#时间处理
chrono = { workspace = true }
#序列化
serde =  { workspace = true }
#序列化JSON
serde_json = { workspace = true }
#缓存
redis = { workspace = true }
#环境配置
dotenvy = { workspace = true }
#数据库
sqlx = { workspace = true }